<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group  android:checkableBehavior="single">

        <item android:enabled="false"
            android:title=" "/>

        <item android:enabled="false"
            android:title=" "/>

        <item android:enabled="false"
            android:title=" "/>

        <item android:id="@+id/wallet"
            android:title="@string/wallet"
            android:icon="@drawable/ic_account_balance_wallet_brown_24dp"/>

        <item android:id="@+id/userInfo"
            android:title="@string/userInfo"
            android:icon="@drawable/ic_person_brown_24dp"/>

        <item android:id="@+id/turnover"
            android:title="@string/turnover"
            android:icon="@drawable/ic_loop_black_24dp"/>

        <item android:id="@+id/history"
            android:title="@string/history"
            android:icon="@drawable/ic_history_black_24dp"/>

        <item android:id="@+id/favoriteLawyer"
            android:title="@string/favoriteLawyer"
            android:icon="@drawable/ic_favorite_black_24dp"/>

        <item android:id="@+id/inBux"
            android:title="@string/inBux"
            android:icon="@drawable/ic_move_to_inbox_black_24dp"/>

        <item android:id="@+id/support"
            android:title="@string/support"
            android:icon="@drawable/ic_local_phone_black_24dp"/>

        <item android:id="@+id/setting"
            android:title="@string/setting"
            android:icon="@drawable/ic_settings_black_24dp"/>

        <item android:id="@+id/about"
            android:title="@string/about"
            android:icon="@drawable/ic_info_black_24dp"/>

        <item android:id="@+id/exitAccount"
            android:title="@string/exitAccount"
            android:icon="@drawable/ic_exit_to_app_black_24dp"/>

    </group>
</menu>